navbar almost ready need to fix collapsed navbar added account page

--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -6,44 +6,41 @@ body {
     font-size: 1rem;
 }
 
-.navbar-brand {
-    /*position: absolute;
-    top: 5px;
-    left: 10px;*/
-    width: 338px;
+.navbar-expand-md .navbar-nav {
+    display: flex;
+    align-items: center;
 }
 
+.navbar .container-fluid{
+    justify-content: space-around;
+}
 
-.al_right {
-    margin-right: 0 !important;
+.navbar-nav {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.container-fluid{
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.width100 {
+    width: 100%;
 }
 
 .navbar-brand img{
     height: 60px;
 }
 
-svg {
-    filter: drop-shadow(inset 0px 2px 2px rgba(0, 0, 0, 0.25));
-}
-
-.navbar-expand-md .navbar-nav .nav-link {
-    color: white;
-}
-
-.nav-link, .nav-link:hover {
+.nav-link {
     color: white;
     width: 200px;
     font-size: 20px;
 }
 
-.navbar-nav {
-    text-align: center;
-    margin-left: auto;
-}
-
-.nav-item {
-    text-align: right;
-}
+.nav-link:hover{color: white;}
 
 .navbar-toggler-icon {
     background-image: url("/toggler-icon.png");
@@ -59,4 +56,33 @@ button:focus, button:focus-visible {
     border: none;
     box-shadow: none;
     outline: none;
+}
+
+.toggler_margin {
+    margin-left: 90%;
+    margin-top: 1%;
+}
+
+.navbar {
+    padding: 0.5rem 0px;
+}
+
+.col-3, .col-4, .col-6, .col-8, .col-9 {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.signup_button {
+    width: 130px;
+    height: 50px;
+    text-align: center;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 18px;
+    color: #555555;
+    padding: 10px;
+}
+
+.adaptive_width {
+    width: fit-content;
 }
